--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,22 +11,24 @@ jobs:
     timeout-minutes: 30
 
     steps:
+    - name: Clone Actions Repo
+      shell: bash
+      run: |
+        git clone https://${{ secrets.GithubPackages_Key }}@github.com/mou-haz/GitHub-WorkFlows
+
     - name: Publish MinimalSoft.MinimalMediator.Abstractions
-      uses: mou-haz/GitHub-WorkFlows/.github/steps/package_publish@main
+      uses: "./GitHub-WorkFlows/.github/steps/package_publish"
       with:
         token: ${{ secrets.GITHUBPACKAGES_KEY }}
-        repo_name: MinimalSoft.MinimalMediator.Abstractions
+        repo_name: "MinimalSoft.MinimalMediator.Abstractions"
         nuget_token: ${{ secrets.Nu_Key }}
         github_packages_token: ${{ secrets.GITHUBPACKAGES_KEY }}
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUBPACKAGES_KEY }}
 
     - name: Publish MinimalSoft.MinimalMediator
-      uses: mou-haz/GitHub-WorkFlows/.github/steps/package_publish@main
+      uses: "./GitHub-WorkFlows/.github/steps/package_publish"
       with:
         token: ${{ secrets.GITHUBPACKAGES_KEY }}
-        repo_name: MinimalSoft.MinimalMediator
+        repo_name: "MinimalSoft.MinimalMediator"
         nuget_token: ${{ secrets.Nu_Key }}
         github_packages_token: ${{ secrets.GITHUBPACKAGES_KEY }}
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUBPACKAGES_KEY }}
+        
