--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       uses: "./GitHub-WorkFlows/.github/steps/package_publish"
       with:
         token: ${{ secrets.GITHUBPACKAGES_KEY }}
-        repo_name: "MinimalSoft.MinimalMediator"
+        repo_name: "MinimalMediator"
         pkg_name: "MinimalSoft.MinimalMediator.Abstractions"
         nuget_token: ${{ secrets.Nu_Key }}
         github_packages_token: ${{ secrets.GITHUBPACKAGES_KEY }}
@@ -29,7 +29,7 @@ jobs:
       uses: "./GitHub-WorkFlows/.github/steps/package_publish"
       with:
         token: ${{ secrets.GITHUBPACKAGES_KEY }}
-        repo_name: "MinimalSoft.MinimalMediator"
+        repo_name: "MinimalMediator"
         pkg_name: "MinimalSoft.MinimalMediator"
         nuget_token: ${{ secrets.Nu_Key }}
         github_packages_token: ${{ secrets.GITHUBPACKAGES_KEY }}
