--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,15 +21,6 @@ jobs:
       with:
         token: ${{ secrets.GITHUBPACKAGES_KEY }}
         repo_name: "MinimalMediator"
-        pkg_name: "MinimalSoft.MinimalMediator.Abstractions"
-        nuget_token: ${{ secrets.Nu_Key }}
-        github_packages_token: ${{ secrets.GITHUBPACKAGES_KEY }}
-
-    - name: Publish MinimalSoft.MinimalMediator
-      uses: "./GitHub-WorkFlows/.github/steps/package_publish"
-      with:
-        token: ${{ secrets.GITHUBPACKAGES_KEY }}
-        repo_name: "MinimalMediator"
-        pkg_name: "MinimalSoft.MinimalMediator"
+        pkg_name: ["MinimalSoft.MinimalMediator.Abstractions", "MinimalSoft.MinimalMediator"]
         nuget_token: ${{ secrets.Nu_Key }}
         github_packages_token: ${{ secrets.GITHUBPACKAGES_KEY }}
